<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Develop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome! Test my app.</string>
    <string name="question1">Do you like the android?</string>
    <string name="confirm">Yes</string>
    <string name="reject">No</string>
    <string name="send">Send!</string>

</resources>
